--- a/app/css/app.css
+++ b/app/css/app.css
@@ -418,15 +418,35 @@ div, i
     font-size: 10pt;
 }
 
-    .product-info p, .rating
+.discount-icon
+{
+    position: relative;
+    background: url('../img/dealIcon.png') no-repeat;
+    width: 57px;
+    height: 53px;
+    color: #9a6faa;
+}
+
+    .discount-icon .icon-text
     {
-        margin: 9px 0 0 0;
+        position: absolute;
+        font-size: 13pt;
+        font-weight: bold;
+        top: 10px;
+        right: 5px;
     }
 
-        .rating.compared
-        {
-            margin-top: 0;
-        }
+}
+
+.product-info p, .rating
+{
+    margin: 9px 0 0 0;
+}
+
+    .rating.compared
+    {
+        margin-top: 0;
+    }
 
 .title
 {
