--- a/views/search.html
+++ b/views/search.html
@@ -1,11 +1,6 @@
 ﻿<div class="search-page">
 
-    <div class="compare-link" ng-show="!selectionMode" ng-click="toggleComparison()">לחץ להשוואת מוצרים</div>
-    <div class="compare-link" ng-show="selectionMode" ng-click="toggleComparison()">צא ממצב בחירה</div>
-    <div class="go-to-comparison" ng-show="isAnyProductSelected()" ng-click="openCamperisonPage()">עבור לדף השוואת מוצרים</div>
-    
-    
-    
+
     <div ng-switch on="!!searchTerm">
         <div class="search-term" ng-switch-when="true">
             מציג תוצאות חיפוש עבור "{{searchTerm}}"
@@ -28,32 +23,41 @@
                     <div class="clear-filter" ng-click="clearSelectedFilterValues()">נקה סינון</div>
                 </li>
             </ul>
-
         </div>
-
     </div>
-
 
     <div class="products-list-container clear"
-
-         ng-swipe-right="navigateNext()"
-         ng-swipe-left="navigateBack()"
-         ng-class="{ 'next-animation' : movedToNext, 'previous-animation' : movedToPrevious}">
+        ng-swipe-right="navigateNext()"
+        ng-swipe-left="navigateBack()"
+        ng-class="{ 'next-animation' : movedToNext, 'previous-animation' : movedToPrevious}">
         <div class="loading" ng-show="loading"></div>
         <div ng-hide="loading"></div>
-            <div class="search-left-arrow top" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
-            <div class="search-right-arrow top" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
-            <div class="products-list-content" ng-show="productsLine1.length">
-                <products-list-items products="currentProductsPage1" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
-                <products-list-items products="currentProductsPage2" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
-            </div>
-            <div class="search-left-arrow bottom" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
-            <div class="search-right-arrow bottom" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
+        <div class="search-left-arrow top" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
+        <div class="search-right-arrow top" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
+        <div class="products-list-content" ng-show="productsLine1.length">
+            <products-list-items products="currentProductsPage1" show-product="showProduct(product)" selected-items="productsToCompare" is-search-page="true" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
+            <products-list-items products="currentProductsPage2" show-product="showProduct(product)" selected-items="productsToCompare" is-search-page="true" max-selection="maxSelection" is-checked-to-compare="isCheckedToCompare(product)"></products-list-items>
         </div>
+        <div class="search-left-arrow bottom" ng-show="canNavigateNext()"><i class="fa fa-chevron-left"></i></div>
+        <div class="search-right-arrow bottom" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
     </div>
 
-    <products-list-navigation></products-list-navigation>
-    <!--    <products-list-navigation step="{{step}}" products-list-length="{{productsLine1.length}}" navigation-info="navigationInfo"></products-list-navigation>-->
+    <div class="bottom">
+
+        <div class="comparison-products">
+            <div ng-show="!isAnyProductSelected()">סמן להשוואה</div>
+            <span ng-repeat="product in productsToCompare">
+                      <img ng-src="{{product.imageUrl}}" />
+                  </span>
+        </div>
+        <div class="go-to-comparison" ng-show="isAnyProductSelected()" ng-click="openCamperisonPage()">להשוואה</div>
+
+    </div>
 
 </div>
+
+<products-list-navigation></products-list-navigation>
+<!--    <products-list-navigation step="{{step}}" products-list-length="{{productsLine1.length}}" navigation-info="navigationInfo"></products-list-navigation>-->
+
+
 
