--- a/views/search.html
+++ b/views/search.html
@@ -50,7 +50,7 @@
 
                 <div class="comparison-products-container" ng-repeat="product in productsToCompare">
                     <div class="remove-product" ng-click="publishRemoveProduct()">
-                        <div class="x"><i class="fa fa-times"></i></div>
+                        <i class="fa fa-times"></i>
                     </div>
                     <img ng-src="{{product.imageUrl}}" />
 
