--- a/views/comparison.html
+++ b/views/comparison.html
@@ -5,13 +5,11 @@
     </h2>
     <div class="loading" ng-show="loading"></div>
     <div class="table-background">
-        <div class="table-container" ng-hide="loading">
+        <div class="comparison-products-table">
             <table class="compare-table">
-                <thead ng-show="!isEmpty()">
-
+                <thead>
                     <tr>
                         <th class="headcol"><div class="inner">מוצרים</div></th>
-                        <th ng-repeat="feature in features">{{feature.header}}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -24,6 +22,27 @@
                                 <img ng-src="{{ product.imageUrl }}" />
                             </div>
                         </td>
+                    </tr>
+                    <tr ng-show="!isFull()">
+                        <td class="headcol">
+                            <div class="inner addproduct">
+                                <div class="add-product-to-compare" ng-click="addPruduct()"></div>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="table-container" ng-hide="loading">
+            <table class="compare-table">
+                <thead ng-show="!isEmpty()">
+                    <tr>
+
+                        <th ng-repeat="feature in features">{{feature.header}}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="product in productsToCompare" ng-show="!isEmpty()">
                         <td ng-repeat="feature in features">
                             <div class="inner">
                                 {{feature.values[product.id]}}
@@ -31,12 +50,9 @@
                         </td>
                     </tr>
                     <tr ng-show="!isFull()">
-                        <td class="headcol">
-                            <div class="inner">
-                                <div class="add-product-to-compare" ng-click="addPruduct()"></div>
-                            </div>
+                        <td ng-repeat="feature in features">
+                            <div class="inner">&nbsp;</div>
                         </td>
-                        <td ng-repeat="feature in features"></td>
                     </tr>
                 </tbody>
             </table>
