--- a/views/comparison.html
+++ b/views/comparison.html
@@ -34,7 +34,7 @@
             </table>
         </div>
         <div class="table-container" ng-hide="loading">
-            <table class="compare-table">
+            <table class="compare-table" ng-style="{width: (150*features.length) + 'px'}">
                 <thead ng-show="!isEmpty()">
                     <tr>
 
