--- a/views/home.html
+++ b/views/home.html
@@ -3,14 +3,14 @@
     <div class="promotions">
         <div class="main-promotion">
             <div>
-                <ul class="nav nav-tabs">
+               <!-- <ul class="nav nav-tabs">
 
                     <li ng-repeat="promotion in main_promotions" ng-class="{'active': isSelected(promotion)}" ng-click="select(promotion)">
                         <a ng-href="#Promotion_{{promotion.id}}" data-toggle="tab">{{promotion.title.text}}</a>
                         <div class="promotion-arrow" ng-show="isSelected(promotion)"><i class="fa fa-caret-up"></i></div>
                     </li>
 
-                </ul>
+                </ul>-->
 
                 <div class="tab-content">
                     <div class="tab-pane"
