--- a/app/css/app.css
+++ b/app/css/app.css
@@ -223,10 +223,12 @@ input[type=submit].search-button
     background-color: transparent;
 }
 
-.user .fa-user
+.user .user-image
 {
-    margin-top: 16px;
-    font-size: 28pt;
+    background: url('../img/user.png') no-repeat;
+    height: 35px;
+    margin-top: 15px;
+    width: 55px;
 }
 
 .user
