--- a/views/comparison.html
+++ b/views/comparison.html
@@ -3,6 +3,9 @@
     <h2 class="filter-path">
         תוצאות השוואה
     </h2>
+    
+    <div class="back-button"><button type="button" class="btn btn-default" ng-click="goBack()">חזור</button></div>
+
     <div class="loading" ng-show="loading"></div>
     <div class="table-background">
         <div class="comparison-products-table">
