--- a/app/css/app.css
+++ b/app/css/app.css
@@ -813,6 +813,11 @@ div, i
     padding-bottom: 1px;
     margin-right: 123px;
     -webkit-overflow-scrolling: touch;
+
+}
+
+.table-container table {
+    -webkit-transform: translate3d(0, 0, 0);
 }
 
 .table-background
