--- a/views/home.html
+++ b/views/home.html
@@ -1,32 +1,38 @@
 ﻿<div class="home-page">
     <div class="loading" ng-show="loading"></div>
     <div class="promotions">
-        <div class="main-promotion">
-            <div>
-               <!-- <ul class="nav nav-tabs">
+        <div class="promotions-container"
+             ng-swipe-left="back()" ng-swipe-right="next()">
+            <div class="main-promotion">
+                <!--  <div>
+                <ul class="nav nav-tabs">
 
                     <li ng-repeat="promotion in main_promotions" ng-class="{'active': isSelected(promotion)}" ng-click="select(promotion)">
                         <a ng-href="#Promotion_{{promotion.id}}" data-toggle="tab">{{promotion.title.text}}</a>
                         <div class="promotion-arrow" ng-show="isSelected(promotion)"><i class="fa fa-caret-up"></i></div>
                     </li>
 
-                </ul>-->
+                </ul>
 
                 <div class="tab-content">
-                    <div class="tab-pane"
-                         id="Promotion_{{promotion.id}}"
-                         ng-repeat="promotion in main_promotions"
-                         ng-class="{'active': isSelected(promotion)}"
-                         ng-swipe-right="swipeNext(promotion)"
-                         ng-swipe-left="swipeBack(promotion)"
-                         ng-click="openPromotion(promotion.link.url)">
-                        <img ng-src="{{promotion.image.url}}" alt="{{promotion.title.text}}" />
-                    </div>
-
+                also removed 'tab-pane'
+                -->
+                <div class="promotion slide-animation"
+                     id="Promotion_{{promotion.id}}"
+                     ng-class="{'active': isSelected(promotion)}"
+                     ng-repeat="promotion in main_promotions"
+                     n-g-swipe-right="swipeNext(promotion)"
+                     n-g-swipe-left="swipeBack(promotion)"
+                     n-g-click="openPromotion(promotion.link.url)">
+                    <img ng-src="{{promotion.image.url}}" alt="{{promotion.title.text}}" />
                 </div>
 
+                <!--</div>
+
+                </div>-->
             </div>
         </div>
+
 
         <div class="seasonal">
             <img ng-src="{{ firstPromotion.image.url}}" alt="{{ firstPromotion.title.text }}" ng-click="openPromotion(firstPromotion.link.url)" />
