--- a/views/search.html
+++ b/views/search.html
@@ -25,8 +25,8 @@
     </div>
 
     <div class="products-list-container clear"
-        ng-swipe-right="navigateNext()"
-        ng-swipe-left="navigateBack()"
+        n-g-swipe-right="navigateNext()"
+        n-g-swipe-left="navigateBack()"
         ng-class="{ 'next-animation' : movedToNext, 'previous-animation' : movedToPrevious}">
         <div class="loading" ng-show="loading"></div>
         <div ng-hide="loading"></div>
@@ -42,9 +42,7 @@
 
     <div class="bottom" ng-hide="!loading && !currentProductsPage1.length">
         <div class="products-comparison-wrapper">
-            <div class="comparison-products">
-                <div class="mark-to-compare" ng-show="!isAnyProductSelected()">סמן להשוואה</div>
-
+            <div class="comparison-products" ng-show="isAnyProductSelected()">
                 <div class="comparison-products-container" ng-repeat="product in productsToCompare">
                     <div class="remove-product" ng-click="publishRemoveProduct(product)">
                         <i class="fa fa-times"></i>
